--- a/views/poll.html
+++ b/views/poll.html
@@ -1,6 +1,7 @@
 
 {{#poll}}
 		<h1>{{question}}</h1>
+		<h4>{{token}}</h4>
 		<form id="pollForm" action="/polls/{{code}}?_method=PUT" method="POST">
 		<radiogroup>
 			{{#choices}}
@@ -11,3 +12,11 @@
 		</form>
 	</ul>
 {{/poll}}
+{{#delete}}
+	<p>Would you like to remove your poll?</p>
+	<form action='/polls/{{poll.code}}?_method=DELETE' method="POST">
+		<input type="hidden" value="{{poll.token}}" name="token">
+		<input type="submit" value="REMOVE">
+	</form>
+{{/delete}}
+<p>Testing</p>
