--- a/views/includes/navbar.html
+++ b/views/includes/navbar.html
@@ -9,7 +9,7 @@
             <ul class="menu-cont">
                 <li class="active"><a href="#home">Home</a></li>
                 <li><a href="/test">Polls</a></li>
-                <li><a data-toggle="modal" data-target="#myModal">Create Poll</a></li>
+                <li><a href="/polls/create">Create Poll</a></li>
             </ul>
         </nav>
     </div>
