Commented out body height
Generates undesirable white-space around the content container on the
create page when some dozen choices are added

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ body,
 html {
     font-family: Roboto, sans-serif;
     font-weight: 300;
-    height: 100%;
+    /*height: 100%; CREATES BUGS ON ANGULAR APP PAGE*/
     width: 100%;
     line-height: 24px;
     font-size: 16px;
