--- a/views/index.html
+++ b/views/index.html
@@ -38,9 +38,11 @@
 					</div>
 						<h4>Polls for the People <br>
 							by the People</h4>
-						<p>Whether you're driven by curiosity or analytics, Pollgeni.us is your bespoke polling platform.
+						<p>Whether you're driven by curiosity or analytics, Pollgeni.us is the bespoke polling platform for you.
 						Tailor polls to your target demographic or submit questions to the anonymous masses and watch your
-						results update in real-time. Engage your audience in the Pollgeni.us chat room to enquire further.</p>
+						results update in real-time. Further engage your audience through the Pollgeni.us chat room
+						and read your participants' rationales. Share unique codes via Twitter and Facebook to direct traffic toward your poll.
+						Publish a series of polls to fine tune your data and differentiate the signal from the noise.</p>
 			</div>
 		</div>
 	</section>
