--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -4,6 +4,7 @@
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		
 		    <meta charset="utf-8">
     	<title>Poll Genius</title>
     	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -27,5 +28,15 @@
 		{{> navbar}}
  		{{{ yield }}}
 		{{> footer}}
+
+		<script src="/socket.io/socket.io.js"></script><!-- socket.io -->
+		<script type="text/javascript" src="/js/jquery.js"></script><!-- jquery -->
+		<script type="text/javascript" src="/js/bootstrap.js"></script><!-- Bootstrap Js -->
+		<script type="text/javascript" src="/js/jquery.flexslider.js"></script><!-- Flexslider Js -->
+		<script type="text/javascript" src="/js/flexslider-settings.js"></script><!-- Flexslider Settings Js -->
+		<script type="text/javascript" src="/js/isotope.pkgd.js"></script><!-- Isotope packaged -->
+		<script type="text/javascript" src="/js/jquery.appear.js"></script><!-- Appear Js -->
+		<script type="text/javascript" src="/js/jquery-scrollToFixed.js"></script><!-- Scroll To Fixed Js -->
+		<script type="text/javascript" src="/js/settings.js"></script><!-- Settings Js -->
 	</body>
 </html>
