--- a/views/results.html
+++ b/views/results.html
@@ -8,6 +8,7 @@
 		<link type="text/css" rel="stylesheet" href="/css/font-awesome.min.css"><!-- font-awesome -->
 		<link type="text/css" rel="stylesheet" href="/css/animate.min.css"><!-- animate css -->
 		<link type="text/css" rel="stylesheet" href="/css/style.css"><!-- page styling -->
+		<link rel="stylesheet" type="text/css" href="/css/result_style.css">
 
 		<link rel="icon" href="../public/favicon.ico">
 	</head>
@@ -186,7 +187,6 @@
 
 		li.col-md-6{
 			line-height: 1.1;
-			float: left;
 		}
 
 		 ul.pie-legend.col-md-4{
@@ -210,16 +210,8 @@
 					</div>
 		</div>
 
-
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="/js/Chart.min.js"></script>
-	<script type="text/javascript" src="/js/bootstrap.js"></script><!-- Bootstrap Js -->
-	<script type="text/javascript" src="/js/jquery.flexslider.js"></script><!-- Flexslider Js -->
-	<script type="text/javascript" src="/js/flexslider-settings.js"></script><!-- Flexslider Settings Js -->
-	<script type="text/javascript" src="/js/isotope.pkgd.js"></script><!-- Isotope packaged -->
-	<script type="text/javascript" src="/js/jquery.appear.js"></script><!-- Appear Js -->
-	<script type="text/javascript" src="/js/jquery-scrollToFixed.js"></script><!-- Scroll To Fixed Js -->
-	<script type="text/javascript" src="/js/settings.js"></script><!-- Settings Js -->
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="/js/client.js"></script>
 	<script type="text/javascript">
