--- a/views/includes/footer.html
+++ b/views/includes/footer.html
@@ -3,52 +3,54 @@
 <div class="footer-top">
 	<div class="container">
     	<div class="row clearfix">
-        	<!-- Start: Footer Menu -->
-            <div class="col-md-2 footer-menu animated" data-animation="fadeInLeft" data-animation-delay="200">
-            	<nav class="footer-nav">
-                	<ul>
-                    	<li><a href="#">Home</a></li>
-                        <li><a href="/test">Polls</a></li>
-                        <li><a data-toggle="modal" data-target="#myModal">Create Poll</a></li>
-                    </ul>
-                </nav>
-            </div>
-        	<!-- End: Footer Menu -->
+        <div class="col-md-6">
+            <h2 id="company-name">Turner Logic</h2>
         	<!-- Start: Footer About -->
-            <div class="col-md-4 footer-about animated" data-animation="fadeInUp" data-animation-delay="400">
-            	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc euismod sed libero at congue. Praesent vulputate dolor velit, in condimentum odio pellentesin ondimentum odio pellentesque</p>
+            <div class="col-md-12 footer-about animated" data-animation="fadeInUp" data-animation-delay="400">
+            	<p class="footer-text">We turn your great ideas into<br>real products.</p>
             </div>
         	<!-- End: Footer About -->
-            <!-- Start: Footer Address -->
-            <div class="col-md-3 footer-address animated" data-animation="fadeInUp" data-animation-delay="600">
-            	<ul>
-                	<li class="email"><a href="#">company@website.com</a></li>
-                	<li class="phone"><a href="#">(00)1800 1234 567</a></li>
-                    <li class="address"><b>Weston Centre</b><br>Street Name, Unknown Place <br>Secret Street, Country, CT99 9899</li>
-                </ul>
-            </div>
-            <!-- End: Footer Address -->
+
             <!-- Start: Footer Map -->
             <div class="col-md-3 footer-map animated" data-animation="fadeInRight" data-animation-delay="800">
                 <ul class="social-footer">
-                	<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                	<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                	<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                	<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                    <li><a href="https://www.facebook.com/TurnerLogic?_rdr=p"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://twitter.com/TurnerLogic"><i class="fa fa-twitter"></i></a></li>
                 </ul>
             </div>
             <!-- End: Footer Map -->
+
+        </div>
+
+            <!-- Start: Footer Address -->
+            <div class="col-md-6 footer-address animated" data-animation="fadeInUp" data-animation-delay="600">
+            	<ul class=" company-info pull-right">
+                	<li class="email"><a href="http://turnerlogic.com/">info@turnerlogic.com</a></li>
+                	<li class="phone"><a href="#">210-901-9955</a></li>
+                    <li class="address">112 E. Pecan Street, 10th Floor</li>
+                </ul>
+            </div>
+            <!-- End: Footer Address -->
         </div>
     </div>
 </div>
 <!-- End: Footer Top -->
 
-<!-- Start: Footer Bottom -->
-<div class="footer-bottom">
-	<div class="container">
-        <p>Turner Logic</p>
-    </div>
-</div>
-<!-- End: Footer Bottom -->
-
 </footer>
+
+<script type="text/javascript">
+    
+    $(window).resize(function(){
+
+        if ($(window).width() < 991)
+        {
+            $('ul.company-info').removeClass('pull-right').css('margin-right','45px');
+
+        } else {
+
+            $('ul.company-info').addClass('pull-right').css('margin-right','0px');
+
+        }
+      
+    });
+</script>
