--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,39 @@
+{{#yield-styles}}
+<style>
+#search-btn, #search-input{
+	height: 50px;
+}
+
+#search-btn {
+	border-radius: 5px 0px 0px 5px;
+	border-left: 5px solid #1E9FB4;
+	border-top: 5px solid #1E9FB4;
+	border-bottom: 5px solid #1E9FB4;
+	background-color: #1E9FB4;
+	color: white;
+	margin-left: 0px;
+}
+
+#search-input {
+	border: 5px solid #1E9FB4;
+	border-radius: 0px 5px 5px 0px;
+	text-align: center;
+	font-family: "Roboto", sans-serif;
+}
+
+#poll-create-btn {
+	height: 50px;
+	background-color: #1E9FB4;
+	border: 5px solid white;
+	color: white;
+}
+
+#period {
+	color: #1E9FB4;
+}
+
+</style>
+{{/yield-styles}}
 
 <!-- THIS DIV CAUSES THE SPINNING GIF AS THE PAGE LOADS -->
 <div id="mask">
@@ -12,9 +48,21 @@
 			<div class="container banner-area">
 				<ul class="slides clearfix">
 					<li>
-						<h1>Poll Genius</h1>
-						<h5>Polls For What Matters</h5>
-						<a href="/test" class="button-large">View Polls	</a>
+						<h1>Poll Geni<span id="period">.</span>us</h1>
+						<h5></h5>
+							<div class="row">
+								<div class="col-md-4 col-md-offset-4">
+								<form action="/" method="POST">
+									<div class="input-group">
+										<span class="input-group-btn">
+											<button id="search-btn" class="btn btn-default" type="submit"><span class='glyphicon glyphicon-search'></span></button>
+										</span>
+										<input id="search-input" type="text" class="form-control" name="code" placeholder="Enter a unique poll code">
+									</div><!-- /input-group -->
+								</form>
+								</div>
+							</div>
+						<a id="poll-create-btn" href="/polls/create" class="button-large">Create Poll</a>
 					</li>
 				</ul>
 			</div>
@@ -25,34 +73,33 @@
 <!-- ============================================================================= -->
 
 <!--============================ ABOUT SECTION OF PAGE ============================-->
-	<section class="about-area" id="about">
-		<div class="about-top-area">
-			<div class="container">    
-				<div class="row colum-contents clearfix">
+<section class="about-area" id="about">
+	<div class="about-top-area">
+		<div class="container">
+			<div class="row colum-contents clearfix">
 
-					<div class="col-md-6 col-conts animated" data-animation="fadeInLeft" data-animation-delay="200">
-					<h1 class="animated" data-animation="fadeInUp" data-animation-delay="100">This<br>is<br>Poll<br>Genius</h1>
-					</div>
-					<div class="col-md-6 col-conts animated" data-animation="fadeInLeft" data-animation-delay="200">
-						<canvas class="animated" id="canvas" width="400" height="300"/>
-					</div>
-						<h4>Polls for the People <br>
-							by the People</h4>
-						<p>Whether you're driven by curiosity or analytics, Pollgeni.us is the bespoke polling platform for you.
-						Tailor polls to your target demographic or submit questions to the anonymous masses and watch your
-						results update in real-time. Further engage your audience through the Pollgeni.us chat room
-						and read your participants' rationales. Share unique codes via Twitter and Facebook to direct traffic toward your poll.
-						Publish a series of polls to fine tune your data and differentiate the signal from the noise.</p>
+				<div class="col-md-6 col-conts animated" data-animation="fadeInLeft" data-animation-delay="200">
+				<h1 class="animated" data-animation="fadeInUp" data-animation-delay="100">This<br>is<br>Poll<br>Genius</h1>
+				</div>
+				<div class="col-md-6 col-conts animated" data-animation="fadeInLeft" data-animation-delay="200">
+					<canvas class="animated" id="canvas" width="400" height="300"/>
+				</div>
+					<h4>Polls for the People <br>
+						by the People</h4>
+					<p>Whether you're driven by curiosity or analytics, Pollgeni.us is the bespoke polling platform for you.
+					Tailor polls to your target demographic or submit questions to the anonymous masses and watch your
+					results update in real-time. Further engage your audience through the Pollgeni.us chat room
+					and read your participants' rationales. Share unique codes via Twitter and Facebook to redirect traffic to your poll.
+					Publish a series of polls to fine tune your data and differentiate the signal from the noise.</p>
 			</div>
 		</div>
-	</section>
+</section>
 <!-- ======================================================================= -->
 
 <!--========================= STASTICAL AREA OF PAGE ========================-->
 	<section class="statistics-main">
 		<div class="solid-bg">
 			<div class="container">
-			
 				<div class="row clearfix">
 					<div class="col-md-3 col-cont animated" data-animation="fadeInRight" data-animation-delay="200">
 						<span class="icon-cont"><i class="fa fa-heart"></i></span>
@@ -78,7 +125,7 @@
 						<hr>
 						<span class="count-btm">Clients</span>
 					</div>
-				</div>    
+				</div>
 			</div>
 		</div>
 	</section>
@@ -88,12 +135,9 @@
 <!--========================= SECTION FOR POPULAR POLLS ========================-->
 	<section class="services-main" id="services">
 		<div class="container">
-		
-			<h2 class="animated">Popular Polls</h2>            
-
-			<div class="row service-all clearfix" ng-controller="appCtrl"> 
+			<h2 class="animated">Popular Polls</h2>
+			<div class="row service-all clearfix" ng-controller="appCtrl">
 				<div class="col-md-4 service-single" ng-repeat="eachPoll in polls | first: 3">
-				
 					<canvas id="doughnut" class="chart chart-doughnut" data="eachPoll.data"
 					labels="eachPoll.labels"></canvas>
 					<h5>{% eachPoll.title %}</h5>
@@ -106,8 +150,7 @@
 		</div>
 	</section>
 <!-- =========================================================================== -->
-   
-   
+
 <!--=========================== FOOTER AREA OF PAGE =============================-->
 <!-- ============================================================================== -->
 
