--- a/views/create.html
+++ b/views/create.html
@@ -3,6 +3,9 @@
 <link rel="stylesheet" href="/fonts/fontawesome-webfont.ttf">
 <link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
 <style>
+	html{
+		background-color: #2C303F;
+	}
 	#question, #choice {
 		height: 60px;
 		border: 3px solid rgb(30, 159, 180);
@@ -84,7 +87,7 @@
 	#content {
 		border: 5px solid rgb(30, 159, 180);
 		border-radius: 15px;
-		margin-top: 89px;
+		margin-top: 100px;
 		background-color: white;
 		padding-left: 32px;
 		padding-right: 32px;
