--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -26,10 +26,40 @@
 		{{{yield-styles}}}
 	</head>
 	<body ng-controller="PollCreateCtrl">
+
+		<!-- for facebook api -->
+		<div id="fb-root"></div>
+		<script>
+		  window.fbAsyncInit = function() {
+		    FB.init({
+		      appId      : '1090702837625972',
+		      xfbml      : true,
+		      version    : 'v2.4'
+		    });
+
+			// FB.getLoginStatus(function(response) {
+			//   if (response.status === 'connected') {
+			//     console.log('Logged in.');
+			//   }
+			//   else {
+			//     FB.login();
+			//   }
+			// });
+
+		  };
+		  (function(d, s, id){
+		     var js, fjs = d.getElementsByTagName(s)[0];
+		     if (d.getElementById(id)) {return;}
+		     js = d.createElement(s); js.id = id;
+		     js.src = "//connect.facebook.net/en_US/sdk.js";
+		     fjs.parentNode.insertBefore(js, fjs);
+		   }(document, 'script', 'facebook-jssdk'));
+		</script>
+
 		{{> navbar}}
 		{{{ yield }}}
 		{{> footer}}
-		
+
 		<script src="/socket.io/socket.io.js"></script><!-- socket.io -->
 		<script type="text/javascript" src="/js/jquery.js"></script><!-- jquery -->
 		<script type="text/javascript" src="/js/bootstrap.js"></script><!-- Bootstrap Js -->
@@ -39,6 +69,43 @@
 		<script type="text/javascript" src="/js/jquery.appear.js"></script><!-- Appear Js -->
 		<script type="text/javascript" src="/js/jquery-scrollToFixed.js"></script><!-- Scroll To Fixed Js -->
 		<script type="text/javascript" src="/js/settings.js"></script><!-- Settings Js -->
+		<script type="text/javascript">
+    
+    $(window).resize(function(){
+
+        if ($(window).width() < 991)
+        {
+            $('ul.company-info').removeClass('pull-right').css('margin-right','45px');
+
+        } else {
+
+            $('ul.company-info').addClass('pull-right').css('margin-right','0px');
+
+        }
+      
+    });
+</script>
+
+<!-- for twitter api -->
+<script>
+	window.twttr = (function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0],
+	    t = window.twttr || {};
+	  if (d.getElementById(id)) return t;
+	  js = d.createElement(s);
+	  js.id = id;
+	  js.src = "https://platform.twitter.com/widgets.js";
+	  fjs.parentNode.insertBefore(js, fjs);
+	 
+	  t._e = [];
+	  t.ready = function(f) {
+	    t._e.push(f);
+	  };
+	 
+	  return t;
+	}(document, "script", "twitter-wjs"));
+</script>
+
 		{{{yield-scripts}}}
 	</body>
 </html>
