--- a/views/all.html
+++ b/views/all.html
@@ -1,12 +1,93 @@
 {{#yield-styles}}
+<style type="text/css">
+	html,body{
+		background-color: #212635;
+	}
+	div.container.holder{
+		margin-top: 120px;
+	}
+	.poll_code,.question{
+		text-align: center;
+	}
+
+	@media screen and (min-width:0px) and (max-width: 500px){
+		canvas{
+			height: 100px;
+			width: 100px;
+		}
+	}
+	@media screen and (min-width: 501px) and (max-width: 640px){
+		canvas{
+			height: 150px;
+			width: 150px;
+		}
+	}
+	@media screen and (min-width: 641px) and (max-width: 991px){
+		canvas{
+			margin-left:0px;
+			height: 200px;
+			width: 200px;
+		}
+	}
+	@media screen and (min-width: 992px) and (max-width: 1200px){
+		canvas{
+			margin-left: 50px;
+			height: 200px;
+			width: 200px;
+		}
+	}
+	@media screen and (min-width: 1201px) and (max-width: 1999px){
+		canvas{
+			margin-left: 80px;
+			height: 200px;
+			width: 200px;
+		}
+	}
+
+</style>
 {{/yield-styles}}
+	<div class=" holder container">
+	{{#polls}}
+			<div class="col-xs-4">
+				<p href="/polls/{{data.code}}/results" class="question">{{data.question}}</p>
+				<p class="poll_code">{{data.code}}</p>
+			</div>
+	{{/polls}}
+	</div>
 
-{{#polls}}
-	<pre>{{data.question}}</pre>
-	<pre>{{data.code}}</pre>
-{{/polls}}
+<script type="text/javascript">
+	var number = 0;
+	$(document).ready(function() {
+		$.each( $('.col-xs-4'), function( index, value ){	
+			$(this).prepend('<canvas id="'+ $('.poll_code')[number].innerHTML +'" class="multiple-results" width="200px" height="200px" ></canvas> ');
+    		number++;
+		});
 
-
+		for(var i = 0; i < $('.col-xs-4').length; i+=3) {
+  			$('.col-xs-4').slice(i, i+3).wrapAll("<div class='row'><div class='container'></div></div>");
+		}
+		$(window).resize(function(){
+			if($(window).width() < 1200)
+			{
+				$('canvas').css('width','200px').css('height','200px');
+			}
+			if($(window).width() < 991)
+			{
+				$('canvas').css('width','200px').css('height','200px');
+			}
+			if($(window).width() < 640)
+			{
+				$('canvas').css('width','150px').css('height','150px');
+			}
+			if($(window).width() < 500)
+			{
+				$('canvas').css('width','100px').css('height','100px');
+			}
+		})
+	});
+</script>
 {{#yield-scripts}}
+<script type="text/javascript" src="/js/chart.min.js"></script>
+<script type="text/javascript" src="/js/client.js"></script>
 {{/yield-scripts}}
 
