made some styling changes

--- a/public/css/result_style.css
+++ b/public/css/result_style.css
@@ -64,7 +64,7 @@ canvas{
 }
 
 .pie-box{
-	background-color: #9ec0b0;
+	/*background-color: #9ec0b0;*/
 	color: #e7e5dc;
 	min-height: 515px;
 	height: 564px;
