updated footer for results page

--- a/views/results.html
+++ b/views/results.html
@@ -176,14 +176,31 @@ li.col-md-6{
 	line-height: 1.1;
 }
 
- ul.pie-legend.col-md-4{
- 	margin-bottom: 40px;	
- 	margin-top: 10px;
- }
+ul.pie-legend.col-md-4{
+	margin-bottom: 40px;	
+	margin-top: 10px;
+}
+
+#company-name{
+	font-size: 40px;
+	font-family: 'Montserrat',sans-serif;
+	margin-top: 10px;
+	float: left;
+}
+
+.footer-text{
+	font-size: 20px;
+	padding-top: 0px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 300;
+	line-height: 24px;
+}
+
  @media (max-width: 991px) {
 	 #pollTitle{
 		 font-size: 55px;
 	 }
+}
 }
 
 </style>
