fixed padding on footer paragraph tag

--- a/views/results.html
+++ b/views/results.html
@@ -195,11 +195,15 @@ ul.pie-legend.col-md-4{
 	font-weight: 300;
 	line-height: 24px;
 }
+.col-md-12.footer-about.animated.fadeInUp.visible{
+	padding-bottom: 0px;
+}
 
  @media (max-width: 991px) {
 	 #pollTitle{
 		 font-size: 55px;
 	 }
+}
 }
 }
 
