floated social media buttons to the right

--- a/views/results.html
+++ b/views/results.html
@@ -199,12 +199,14 @@ ul.pie-legend.col-md-4{
 	padding-bottom: 0px;
 }
 
+.twitter-share-button,.fb-share-button{
+	float: right;
+}
+
  @media (max-width: 991px) {
 	 #pollTitle{
 		 font-size: 55px;
 	 }
-}
-}
 }
 
 </style>
